황자현 커밋!!

--- a/src/main/resources/templates/admin/payment.html
+++ b/src/main/resources/templates/admin/payment.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>결제 관리</title>
+    <title>공양미 내역</title>
     <link
       href="https://hangeul.pstatic.net/hangeul_static/css/nanum-barun-gothic.css"
       rel="stylesheet" />
@@ -21,7 +21,7 @@
       <!-- content.css -->
       <section class="content">
         <div class="content__header">
-          <span>결제 관리</span>
+          <span>공양미 내역</span>
           <a href="javascript:void(0)"> 로그아웃 </a>
         </div>
         <main class="content__main">
