--- a/src/main/resources/static/css/admin/default.css
+++ b/src/main/resources/static/css/admin/default.css
@@ -110,6 +110,17 @@ section.main {
   transition: all 0.2s;
   cursor: pointer;
 }
+.button__type_3 {
+  width: 95px;
+  font-weight: 600;
+  text-align: center;
+  line-height: 35px;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  transition: all 0.2s;
+  cursor: pointer;
+}
 
 .button__color__green {
   background: #00ae68;
@@ -295,4 +306,9 @@ section.modal-stage {
 
 .btn:focus {
   outline: none;
+}
+
+section.trip-status{
+  background-color: #ffffff;
+  min-width: 946px;
 }
