--- a/src/main/resources/static/css/main/header.css
+++ b/src/main/resources/static/css/main/header.css
@@ -65,6 +65,10 @@ h3, p, div {
     word-break: break-all;
 }
 
+:not(svg) {
+    transform-origin: 0px 0px;
+}
+
 .header-layout{
     position: relative;
     display: flex;
@@ -151,7 +155,33 @@ h3, p, div {
     cursor: pointer;
 }
 
+.button-wrapper{
+    padding: 12px;
+    display: inline-flex;
+    width: auto;
+    min-width: 30px;
+    min-height: 44px;
+    color: rgb(25, 25, 25);
+    font-size: 12px;
+    line-height: 28px;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    font-weight: bold;
+}
+
 .user-button-wrapper {
+    display: flex;
+    -webkit-box-align: center;
+    align-items: center;
+    -webkit-box-pack: center;
+    justify-content: center;
+    z-index: 100;
+}
+
+.login-user-button-wrapper{
+    position: relative;
     display: flex;
     -webkit-box-align: center;
     align-items: center;
@@ -206,6 +236,19 @@ h3, p, div {
     line-height: 28px;
     font-weight: bold;
     flex-shrink: 0;
+}
+
+.profile-img{
+    display: inline-block;
+    background-image: url(https://tumblbug-upi.imgix.net/default_avatar.png?auto=format%2Ccompress&ch=Save-Data&facepad=2.0&fit=facearea&h=250&mask=ellipse&w=250&s=80a07af0ffbe653137dd423ed1d5651c);
+    background-size: cover;
+    background-position: 50% 38%;
+    width: 24px;
+    height: 24px;
+    border-radius: 50%;
+    box-shadow: rgb(208, 208, 208) 0px 0px 1px 0px inset, rgb(208, 208, 208) 0px 0px 1px 0px;
+    margin-right: 0px;
+    margin-top: 5px;
 }
 
 svg:not(:root) {
@@ -318,6 +361,20 @@ svg:not(:root) {
     justify-content: center;
     -webkit-box-align: center;
     align-items: center;
+}
+
+.like-icon{
+    display: flex;
+    min-width: 48px;
+    transform: scale(0.5);
+    cursor: pointer;
+}
+
+.notification-icon{
+    position: relative;
+    display: flex;
+    min-width: 48px;
+    cursor: pointer;
 }
 
 .menu-icon{
