캘린더 퍼블리싱

--- a/src/main/resources/static/css/calendar/common.css
+++ b/src/main/resources/static/css/calendar/common.css
@@ -1,5 +1,71 @@
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, font, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, dl, dt, dd, ol, select, button, ul, li, fieldset, form, label, legend, caption, tbody, tfoot, thead, tr, textarea {
+    margin: 0;
+    padding: 0;
+}
 article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section, fieldset, legend {
     display: block;
     margin: 0;
     padding: 0;
+}
+@media screen and (max-width: 1200px){
+    #sub {
+
+    }
+}
+body, td, form, select, input, button, textarea, div, option, pre, p, span, blockquote, li, dt, dd, legend, label, h1, h2, h3, h4, h5, h6 {
+    font-family: noto,dotum,gullim,Tahoma,Arial,Helvetica,sans-serif;
+    font-size: 15px;
+    color: #666666;
+    word-break: keep-all !important;
+    -ms-word-break: break-all;
+    word-break: break-all;
+    word-break: break-word;
+    -webkit-hyphens: auto;
+    -moz-hyphens: auto;
+    hyphens: auto;
+}
+#sub #content {
+    position: relative;
+    width: 1200px;
+    margin: 0 auto;
+    padding: 70px 0;
+}
+a, input, select, textarea, button, label {
+    vertical-align: top;
+    outline: none;
+}
+input, select, textarea {
+    box-sizing: border-box;
+}
+a:visited {
+    text-decoration: none;
+    color: #666666;
+}
+dl, ul, ol, menu, li {
+    list-style: none;
+}
+li {
+    display: block;
+}
+ul {
+    font-family: empty;
+    font-size: 0;
+}
+table {
+    border-collapse: collapse;
+    border-spacing: 0;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    margin: 0;
+    padding: 0;
+    text-align: left;
+}
+.mt10 {
+    margin-top: 10px !important;
+}
+img {
+    -ms-interpolation-mode: bicubic !important;
+    border: none;
+    vertical-align: middle;
 }
