--- a/src/main/resources/templates/calendar/calendar.html
+++ b/src/main/resources/templates/calendar/calendar.html
@@ -5,14 +5,20 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/static/css/calendar/calendar.css">
     <link rel="stylesheet" href="/static/css/calendar/common.css">
-
-    <title>Document</title>
+    <link rel="stylesheet" href="/static/css/calendar/global.css">
+    <link rel="stylesheet" href="/static/css/calendar/calendar-response.css">
+    <title>심봉사 캘린더</title>
 </head>
-
-<body class="sub">
-    <section id="sub">
+<style>
+    #body{
+        background: white;
+    }
+</style>
+<body class="sub" id="body">
+    <header id="_header"></header>
+    <div id="wrap">
+        <section id="sub">
         <div id="content">
             <div class="sub-tit">
                 <h3>자원봉사 일정/신청</h3>
@@ -343,6 +349,13 @@
             </script>
         </div>
     </section>
+</div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script type="text/javascript">
+    $(document).ready(function(){
+        $("#_header").load("../main/header.html");
+    });
+</script>
 
 </html>
