--- a/src/main/resources/templates/calendar/calendar.html
+++ b/src/main/resources/templates/calendar/calendar.html
@@ -5,9 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/css/font/font.css">
     <link rel="stylesheet" href="/static/css/calendar/common.css">
     <link rel="stylesheet" href="/static/css/calendar/global.css">
     <link rel="stylesheet" href="/static/css/calendar/calendar-response.css">
+    <link href="//db.onlinewebfonts.com/c/1c45e28f8e86cc89876f003b953cc3e9?family=SF+Pro+Text" rel="stylesheet" type="text/css"/>
     <title>심봉사 캘린더</title>
 </head>
 <style>
@@ -16,6 +18,7 @@
     }
 </style>
 <body class="sub" id="body">
+    <div>폰트 확인용</div>
     <header id="_header"></header>
     <div id="wrap">
         <section id="sub">
@@ -24,12 +27,6 @@
                 <h3>자원봉사 일정/신청</h3>
                 <em>국내외 이웃들이 여러분의 참여를 기다립니다.</em>
             </div>
-
-            <ul class="tab1">
-                <li class="active"><a href="/welfare/schedule">국내자원봉사</a></li>
-                <li class=""><a href="/welfare/schedule2">해외자원봉사</a></li>
-                <li class=""><a href="/welfare/schedule3">교육프로그램</a></li>
-            </ul>
 
             <div class="sche-date" id="title_i">
                 <form name="searchForm" action="">
