회원가입 선택, 로그인 선택, 비밀번호 찾기, 비밀번호 변경 페이지 완료

--- a/src/main/resources/static/css/join-login/password-page.css
+++ b/src/main/resources/static/css/join-login/password-page.css
@@ -156,6 +156,7 @@ button {
     line-height: 20px;
     letter-spacing: -0.015em;
     margin: 0px 0px 12px;
+    display: none;
 }
 
 .password-explain {
