--- a/src/main/resources/templates/join-login/change-password.html
+++ b/src/main/resources/templates/join-login/change-password.html
@@ -24,23 +24,23 @@
                 <div class="password-inner-wrap">
                     <h3 class="password-title">비밀번호 재설정</h3>
 
-                    <form action="">
+                    <form action="" name="changePasswordForm">
                         <div class="input-div">
                             <div class="input-title">변경할 비밀번호</div>
                             <div class="input-include-div">
                                 <span class="input-include-span">
-                                    <input type="text" class="input-write" placeholder="변경할 비밀번호">
+                                    <input type="password" class="input-write" placeholder="변경할 비밀번호">
                                 </span>
                             </div>
-                            <div class="email-error">변경할 비밀번호를 입력해주세요</div>
+                            <div class="email-error"></div>
                         </div>
                         <div class="input-div">
                             <div class="input-include-div">
                                 <span class="input-include-span">
-                                    <input type="text" class="input-write" placeholder="변경할 비밀번호 확인">
+                                    <input type="password" class="input-write" placeholder="변경할 비밀번호 확인">
                                 </span>
                             </div>
-                            <div class="email-error">변경할 비밀번호를 한번 더 입력해주세요</div>
+                            <div class="email-error"></div>
                         </div>
                         </form>
                         <button class="submit-button">
@@ -53,4 +53,6 @@
         </div>
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="../../static/js/join-login/change-password.js"></script>
 </html>
