--- a/src/main/resources/templates/join-login/find-password.html
+++ b/src/main/resources/templates/join-login/find-password.html
@@ -24,7 +24,7 @@
                 <div class="password-inner-wrap">
                     <h3 class="password-title">비밀번호 찾기</h3>
 
-                    <form action="">
+                    <form action="" name="findPasswordForm">
                         <div class="input-div">
                             <div class="input-title">이메일 주소</div>
                             <div class="input-include-div">
@@ -32,10 +32,10 @@
                                     <input type="text" class="input-write" placeholder="이메일 주소를 입력해주세요">
                                 </span>
                             </div>
-                            <div class="email-error">이메일 주소를 입력해주세요</div>
+                            <div class="email-error"></div>
                             <div class="password-explain">심봉사 가입 시 사용하신 이메일을 입력하시면 새 비밀번호를 생성할 수 있는 링크를 보내드립니다.</div>
                         </div>
-                        <button class="submit-button">
+                        <button class="submit-button" type="button">
                             <span>비밀번호 설정 링크 받기</span>
                         </button>
                     </form>
@@ -45,4 +45,6 @@
         </div>
     </div>
 </body>
+<script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+<script src="../../static/js/join-login/find-password.js"></script>
 </html>
