--- a/src/main/resources/templates/main/footer.html
+++ b/src/main/resources/templates/main/footer.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="../../static/css/font/font.css">
     <link rel="stylesheet" href="../../static/css/main/footer.css">
 </head>
 <body>
@@ -88,11 +89,79 @@
                 <div class="footer-link-customer">
                     <div class="footer-link-customer-title">고객지원</div>
                     <div class="footer-link-customer-date">평일 9:00 ~ 17:00 (12:00 ~14:00 제외)</div>
-                    <a href="#" class="footer-link-customer-channel-talk">에 문의</a>
+                    <a href="#" class="footer-link-customer-channel-talk">텀블벅에 문의</a>
                 </div>
             </div>
-            <div class="footer-company-wrapper"></div>
-            <div class="footer-notify"></div>
+            <div class="footer-company-wrapper">
+                <div class="footer-company">
+                    <div class="footer-company-item">
+                        <strong>회사명</strong>
+                        <span>심봉사(주)</span>
+                    </div>
+                    <div class="footer-company-item">
+                        <strong>주소</strong>
+                        <span>서울특별시 강남구 테헤란로 146, 4층(역삼동)</span>
+                    </div>
+                    <div class="footer-company-item">
+                        <strong>대표</strong>
+                        <span>황자현</span>
+                    </div>
+                    <div class="footer-company-item">
+                        <strong>사업자등록번호</strong>
+                        <span>105-87-52823</span>
+                    </div>
+                    <div class="footer-company-item">
+                        <strong>통신판매업 신고번호</strong>
+                        <span>2022-서울서초-0352</span>
+                    </div>
+                    <div class="footer-company-item">
+                        <strong>대표번호</strong>
+                        <span>02-6080-0760</span>
+                    </div>
+                    <div class="footer-copyright">
+                        © 
+                        2023
+                        Simbongsa Inc.
+                    </div>
+                </div>
+                <div class="footer-share-button-section">
+                    <a href="#" class="footer-share-button" target="_blank">
+                        <div name="kakaotalk" class="sns-icon icon">
+                            <svg viewBox="0 0 48 48"><path fill-rule="evenodd" clip-rule="evenodd" d="M24 4C11.8 4 2 11.6865 2 21.0924C2.4 27.5653 6.4 33.1279 12.2 35.5552L10.1 43.2417C10 43.444 10.1 43.7474 10.3 43.8475C10.5 44.0508 10.9 44.0508 11.1 43.8475L20 37.8814C21.3 38.0837 22.6 38.1848 24 38.1848C36.1 38.1848 46 30.4983 46 21.0924C46 11.6865 36.2 4 24 4Z"></path></svg>
+                        </div>
+                    </a>
+                    <a href="#" class="footer-share-button" target="_blank">
+                        <div name="facebook" class="sns-icon icon">
+                            <svg viewBox="0 0 48 48"><path fill-rule="evenodd" clip-rule="evenodd" d="M27.3343 2.24555C15.2931 0.443311 4.05474 8.75365 2.24857 20.8687C0.442397 32.9838 8.67052 44.1978 20.7117 46V30.4807H15.1928V24.0727H20.7117V19.1666V17.6647C21.0127 13.3594 24.7254 10.1554 29.0401 10.4558C30.6456 10.4558 32.3514 10.656 33.9579 10.8563V16.3631H31.047H30.3446C28.5384 16.5634 27.3343 18.0652 27.4356 19.8675V23.9726H33.5556L32.5521 30.3816H27.535V46C32.6525 45.199 37.3686 42.4956 40.6799 38.5908C44.0916 34.5858 45.9991 29.3803 45.9991 24.0727C46.0984 13.1591 38.071 3.84755 27.3343 2.24555Z"></path></svg>
+                        </div>
+                    </a>
+                    <a href="#" class="footer-share-button" target="_blank">
+                        <div name="twitter" class="sns-icon icon">
+                            <svg viewBox="0 0 48 48"><path fill-rule="evenodd" clip-rule="evenodd" d="M46 10.288C44.304 10.986 42.607 11.485 40.812 11.784C42.707 10.587 44.104 8.792 44.803 6.698C43.007 7.795 41.111 8.493 39.115 8.892C37.419 7.097 35.024 6 32.53 6C27.542 6.1 23.451 10.188 23.551 15.175C23.551 15.873 23.65 16.571 23.75 17.269C16.467 16.87 9.682 13.38 5.192 7.596C2.798 11.784 3.995 17.169 7.986 19.962C6.589 19.962 5.192 19.563 3.896 18.765V18.865C3.796 23.253 6.889 27.042 11.079 27.939C10.281 28.14 9.483 28.239 8.685 28.239C8.086 28.239 7.587 28.14 6.988 28.04C8.086 31.729 11.478 34.322 15.37 34.422C12.177 37.015 8.186 38.411 4.195 38.411C3.497 38.411 2.798 38.411 2 38.311C6.09 41.103 10.879 42.5 15.769 42.5C30.036 42.4 41.41 30.832 41.41 16.571V16.172V14.975C43.306 13.779 44.803 12.183 46 10.288Z"></path></svg>
+                        </div>
+                    </a>
+                    <a href="#" class="footer-share-button" target="_blank">
+                        <div name="instagram" class="sns-icon icon">
+                            <svg viewBox="0 0 48 48"><path fill-rule="evenodd" clip-rule="evenodd" d="M36.0761 9.1C36.0761 10.5 37.1785 11.6 38.5816 11.6C39.8846 11.6 41.0872 10.5 41.0872 9.1C41.0872 7.7 39.9848 6.6 38.5816 6.6C37.1785 6.6 36.0761 7.7 36.0761 9.1ZM10.9199 24C10.9199 31.1 16.8331 37 24.0492 37C31.2653 37 37.0783 31.2 37.0783 24C37.0783 16.8 31.1651 10.9 23.949 10.9C16.8331 10.9 10.9199 16.8 10.9199 24ZM11.3208 2H36.7776C41.9893 2 46.0984 6.2 45.9982 11.3V36.7C45.9982 41.8 41.889 46 36.6774 46H11.3208C6.2094 46 2 41.8 2 36.6V11.3C2 6.2 6.2094 2 11.3208 2ZM15.1293 24C15.1293 19.1 19.1383 15.1 24.0492 15.1C29.0604 15.1 32.9691 19.1 32.9691 24C32.9691 28.9 28.9602 32.9 24.0492 32.9C19.1383 32.9 15.1293 28.9 15.1293 24Z"></path></svg>
+                        </div>
+                    </a>
+                    <a href="#" class="footer-share-button" target="_blank">
+                        <div name="naver" class="sns-icon icon">
+                            <svg viewBox="0 0 48 48"><path fill-rule="evenodd" clip-rule="evenodd" d="M31 4V24.1537L17.001 4H2V44H17.001V23.7455L31 43.8982H46V4H31Z"></path></svg>
+                        </div>
+                    </a>
+                    <a href="#" class="footer-share-button" target="_blank">
+                        <div name="brunch" class="sns-icon icon">
+                            <svg viewBox="0 0 48 48"><path fill-rule="evenodd" clip-rule="evenodd" d="M32.0692 11.9768C31.4321 13.9027 30.2707 15.4537 28.6353 16.6481C28.3454 16.8606 28.0418 17.053 27.7273 17.2525L27.7272 17.2525C27.5803 17.3456 27.431 17.4402 27.2796 17.5392C27.5757 17.9993 27.5124 18.4659 27.2512 18.872C26.9542 19.3349 26.6159 19.785 26.2263 20.1709C24.0208 22.359 22.1646 24.8065 20.6952 27.5712C20.7293 27.5448 20.7646 27.5196 20.7998 27.4943C20.8762 27.4396 20.9526 27.3849 21.0178 27.3191C22.0647 26.2777 23.1528 25.2841 24.4068 24.4902C25.3078 23.9201 26.2538 23.4571 27.341 23.3682C27.4033 23.3627 27.4666 23.3582 27.5298 23.3563C29.0698 23.3141 29.8747 24.2207 29.6721 25.747C29.5043 27.0056 28.8654 28.0121 28.0065 28.8976C26.1338 30.8281 23.8265 31.9941 21.2378 32.6009C20.1012 32.8676 18.9352 33.0189 17.7747 33.1582C17.3136 33.2141 17.0661 33.4195 16.9057 33.8063C16.8976 33.8258 16.8887 33.8453 16.8798 33.865C16.8513 33.9275 16.8226 33.9908 16.8177 34.0556C16.7618 34.8275 16.2319 35.1786 15.6003 35.4462L15.4777 35.4979L15.4777 35.4979C15.1427 35.6394 14.8051 35.7819 14.4261 35.8807C14.7036 35.1769 15.0781 34.5344 15.4532 33.8911C15.658 33.5398 15.8629 33.1883 16.0523 32.8264L15.9194 32.7334L15.9179 32.7324C15.6391 32.5374 15.3597 32.3419 15.0714 32.1389C15.1675 31.9696 15.2398 31.8415 15.3121 31.7134L15.3125 31.7127C15.504 31.8098 15.6877 31.9033 15.8707 31.9964C16.0433 32.0843 16.2152 32.1718 16.3923 32.2617C16.5933 31.9151 16.7924 31.5724 16.99 31.2322L16.9913 31.2299C17.4487 30.4426 17.8981 29.6689 18.3439 28.893C18.9862 27.7759 19.6253 26.657 20.2644 25.5381C21.6738 23.0706 23.0832 20.6031 24.5268 18.1561C25.6919 16.1816 26.9533 14.2547 28.5666 12.6066C29.1954 11.9631 29.9379 11.4222 30.6703 10.8915C31.0434 10.622 31.5201 10.303 31.9839 10.677C32.3967 11.0084 32.2413 11.4676 32.1025 11.8776C32.0911 11.9111 32.0799 11.9441 32.0692 11.9768ZM23.9998 1.99982C11.8493 1.99982 1.99976 11.8494 1.99976 23.9998C1.99976 36.1502 11.8493 45.9998 23.9998 45.9998C36.1502 45.9998 45.9998 36.1502 45.9998 23.9998C45.9998 11.8494 36.1502 1.99982 23.9998 1.99982ZM25.8687 17.937L26.2085 17.3788C26.2322 17.415 26.2479 17.4385 26.259 17.455C26.2733 17.4761 26.2798 17.4859 26.2855 17.4962C26.6686 18.2267 26.2836 18.7208 25.7822 19.1975C25.4518 19.5113 25.132 19.8372 24.8124 20.163L24.8123 20.163C24.6745 20.3035 24.5367 20.444 24.398 20.5835C24.3669 20.5587 24.3357 20.5331 24.3045 20.5074C24.8221 19.6567 25.3402 18.8054 25.8687 17.937ZM17.8424 32.4568C17.826 32.4272 17.8095 32.3974 17.7933 32.3672C17.9915 32.1046 18.1873 31.8402 18.3832 31.5757C18.8148 30.9927 19.2464 30.4098 19.7036 29.8473C21.2234 27.9801 22.9193 26.2998 25.0258 25.0871C25.4062 24.8671 25.8095 24.6828 26.2156 24.516C26.431 24.4262 26.6758 24.3812 26.9114 24.3657C27.5512 24.3253 27.8784 24.6636 27.8326 25.3025C27.7602 26.3172 27.3211 27.1917 26.7289 27.9911C25.1404 30.1306 22.9688 31.3736 20.4232 32.0061C19.8375 32.1519 19.2423 32.2606 18.6472 32.3694L18.6469 32.3695C18.389 32.4166 18.1311 32.4638 17.8739 32.5139L17.8424 32.4568ZM30.7989 11.8506C29.1581 13.4722 27.7217 15.2615 26.4347 17.1801C28.4156 15.8372 30.0363 14.1954 30.7989 11.8506Z"></path></svg>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <!-- <div class="footer-notify">
+                <div class="footer-notify-text">
+                    텀블벅은 플랫폼 제공자로서 프로젝트의 당사자가 아니며, 직접적인 통신판매를 진행하지 않습니다. 프로젝트의 완수 및 선물제공의 책임은 해당 프로젝트의 창작자에게 있으며, 프로젝트와 관련하여 후원자와 발생하는 법적 분쟁에 대한 책임은 해당 창작자가 부담합니다.
+                </div>
+            </div> -->
         </div>
     </footer>
 </body>
